demo/src/main/java/com/example/demo/web/rest/errors/exceptions/BadRequestException.java
package com.example.demo.web.rest.errors.exceptions;

import org.springframework.http.HttpStatus;

public class BadRequestException extends ApiException {
    public BadRequestException(String message) {
        super(message, HttpStatus.BAD_REQUEST);
    }
}
